# FullStack

./: .env  docker-compose.yml
Backend/: .env.test  Dockerfile  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts
Backend/prisma/: schema.prisma  seed.ts
Backend/src/: app.ts  server.js  server.ts
Backend/src/__mocks__/: db.ts  prisma.ts
Backend/src/controllers/: authControllers.js  authControllers.ts  commentController.js  commentController.ts  geminiAIcontroller.ts  notificationsController.js  notificationsController.ts  postController.js  postController.ts  uploadController.js  uploadController.ts
Backend/src/lib/: cache.ts  cloudinary.ts  prisma.ts  redis.ts
Backend/src/middleware/: errorMiddleware.ts  protect.js  protect.ts  upload.ts  validate.js  validate.ts
Backend/src/queues/: emailQueue.ts
Backend/src/routes/: authRoutes.js  authRoutes.ts  commentRoutes.js  commentRoutes.ts  geminiAIRoutes.ts  notificationRoutes.ts  postRoutes.js  postRoutes.ts  uploadRoutes.js  uploadRoutes.ts
Backend/src/templates/: reset-password.hbs  welcome.hbs
Backend/src/tests/: auth.test.ts  setup.ts
Backend/src/utils/: generateToken.js  generateToken.ts
Frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Frontend/src/: App.tsx  api.ts  index.css  main.tsx
ai-service/: .env  .gitignore  main.py  pyproject.toml  requirements.txt
ai-service/src/: main.py
ai-service/src/models/: schema.py
ai-service/src/routes/: ai_routes.py
ai-service/src/services/: gemini.py
(+62 files in other folders)
